not compleate defect in localdatabase

--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,6 @@
 
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
   -->
   <base href="$FLUTTER_BASE_HREF">
 
@@ -31,6 +28,9 @@
 
   <title>scarel_info_machine</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Add the Sqflite web worker script -->
+  <script src="sqflite_sw.js"></script> <!-- Make sure this file is in the web directory -->
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
